--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -1,49 +1,4 @@
-/* .about {
-    height: 80vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    position: relative;
-}
-
-.about h1 {
-    margin: 50px;
-}
-
-.abt-cont {
-    width: 70%;
-    display: flex;
-    align-items: flex-start;
-}
-
-.abt-left {
-    width: 50%;
-    font-size: 1.3rem;
-    color: rgb(83, 83, 83);
-    line-height: 2.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.clouds {
-    position: relative;
-    top: -80px;
-    left: 100px;
-    animation: float 2s infinite alternate-reverse;
-}
-
-@keyframes float {
-    0% {
-        transform: translateY(-60px);
-    }
-    100% {
-        transform: translateY(0px);
-    }
-}
- */
- .about {
+.about {
     height: fit-content;
     width: 100%;
     display: flex;
@@ -88,3 +43,49 @@
     }
 }
 
+/* Responsive styles */
+@media (max-width: 1200px) {
+    .abt-cont {
+        width: 80%;
+    }
+    .abt-left {
+        font-size: 1.2rem;
+        line-height: 2.2rem;
+    }
+    .clouds {
+        top: -4rem; /* Adjusted for smaller screens */
+        left: 5rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .abt-cont {
+        width: 90%;
+        flex-direction: column;
+        align-items: center;
+    }
+    .abt-left {
+        width: 100%;
+        font-size: 1.1rem;
+        line-height: 2rem;
+    }
+    .clouds {
+        top: -3rem;
+        left: 4rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .abt-cont {
+        width: 100%;
+        padding: 0 10px;
+    }
+    .abt-left {
+        font-size: 1rem;
+        line-height: 1.8rem;
+    }
+    .clouds {
+        top: -2rem;
+        left: 3rem;
+    }
+}
