--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,30 @@
     transform: rotate(360deg);
   }
 }
+
+@media (max-width: 1200px) {
+  .App {
+    padding: 10px 40px;
+  }
+  .App-header {
+    font-size: calc(8px + 2vmin);
+  }
+}
+
+@media (max-width: 768px) {
+  .App {
+    padding: 10px 20px;
+  }
+  .App-header {
+    font-size: calc(6px + 2vmin);
+  }
+}
+
+@media (max-width: 480px) {
+  .App {
+    padding: 10px 10px;
+  }
+  .App-header {
+    font-size: calc(4px + 2vmin);
+  }
+}
