--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -26,7 +26,7 @@
     display: flex;
     align-items: center;
     position: relative;
-    margin-bottom: -20px;
+    margin-bottom: -20px; /* Adjust this if needed */
 }
 
 .f-content {
@@ -81,3 +81,4 @@
         gap: 0.5rem;
     }
 }
+
