--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -1,3 +1,12 @@
+.Intro {
+  height: fit-content;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
 .intro {
   height: 90vh;
   width: 100%;
@@ -8,14 +17,14 @@
 .i-right {
   flex: 0;
   position: relative;
-  margin-top: 0.625rem; 
+  margin-top: 0.625rem;
 }
 
 .i-left {
-  margin-top: 9.375rem; 
+  margin-top: 9.375rem;
   display: flex;
   flex-direction: column;
-  gap: 0.3125rem; 
+  gap: 0.3125rem;
 }
 
 .i-left > :nth-child(1) {
@@ -36,16 +45,16 @@
   color: rgb(82, 82, 82);
   text-align: left;
   margin-top: 0.3125rem;
-  margin-bottom: 1.875rem; 
+  margin-bottom: 1.875rem;
 }
 
 .button {
-  width: 7.5rem; 
-  height: 2.5rem; 
-  border-radius: 1.25rem; 
+  width: 7.5rem;
+  height: 2.5rem;
+  border-radius: 1.25rem;
   background: linear-gradient(180deg, #ce7eff 26.71%, #b42ffb 99.36%);
   border: none;
-  box-shadow: 0 1.25rem 1.5rem 0.1875rem rgba(184, 40, 251, 0.42); 
+  box-shadow: 0 1.25rem 1.5rem 0.1875rem rgba(184, 40, 251, 0.42);
   color: aliceblue;
   font-size: 1.1rem;
 }
@@ -53,7 +62,7 @@
 .icons {
   display: flex;
   justify-content: left;
-  margin: 6.25rem 3.125rem 3.125rem 0.625rem; 
+  margin: 6.25rem 3.125rem 3.125rem 0.625rem;
   gap: 4.375rem;
 }
 
@@ -63,55 +72,55 @@
 }
 
 .icons img {
-  height: 2.8125rem; 
-  margin: 6.25rem 3.125rem 3.125rem 0; 
+  height: 2.8125rem;
+  margin: 6.25rem 3.125rem 3.125rem 0;
 }
 
 .y-bg {
-  width: 31.25rem; 
+  width: 31.25rem;
   position: absolute;
   top: 9.375rem;
   left: 0;
 }
 
 .b-bg {
-  width: 31.25rem; 
+  width: 31.25rem;
   position: relative;
-  top: -16.875rem; 
-  left: -6.25rem; 
+  top: -16.875rem;
+  left: -6.25rem;
   z-index: -10;
 }
 
 .boy {
   position: relative;
-  top: 0.125rem; 
-  left: 9.375rem; 
+  top: 0.125rem;
+  left: 9.375rem;
   z-index: 1;
   scale: 1.1;
 }
 
 .g-emoji {
   position: absolute;
-  top: -1.25rem; 
-  left: -18.75rem; 
+  top: -1.25rem;
+  left: -18.75rem;
   z-index: 1;
   scale: 0.7;
 }
 
 .img-cont {
   position: absolute;
-  width: 12.5rem; 
+  width: 12.5rem;
   height: 3.75rem;
-  padding: 1.25rem 2.5rem; 
+  padding: 1.25rem 2.5rem;
   background-color: rgb(255, 255, 255);
-  top: 28.75rem; 
-  left: 2.0625rem; 
+  top: 28.75rem;
+  left: 2.0625rem;
   z-index: 1;
-  border-radius: 1.875rem; 
+  border-radius: 1.875rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 1.25rem; 
+  gap: 1.25rem;
   animation: left 0.5s 1 forwards;
 }
 
@@ -120,20 +129,20 @@
 }
 
 .i-right > :nth-child(6) {
-  top: 4.375rem; 
-  left: 40.625rem; 
+  top: 4.375rem;
+  left: 40.625rem;
 }
 
 .blur1 {
   position: absolute;
   top: 0;
-  left: 37.5rem; 
+  left: 37.5rem;
   z-index: -1;
-  width: 25rem; 
-  height: 25rem; 
+  width: 25rem;
+  height: 25rem;
   background-color: rgb(238, 210, 255);
   border-radius: 50%;
-  filter: blur(4.5rem); 
+  filter: blur(4.5rem);
 }
 
 .blur2 {
@@ -145,17 +154,18 @@
   height: 25rem;
   background: rgb(193, 245, 255);
   border-radius: 50%;
-  filter: blur(4.5rem); 
+  filter: blur(4.5rem);
 }
 
 @keyframes left {
   0% {
-    transform: translateX(12.5rem); 
+    transform: translateX(12.5rem);
   }
   100% {
     transform: translateX(0);
   }
 }
+
 @media (max-width: 768px) {
   .g-emoji {
     left: -12.5rem;
@@ -220,5 +230,3 @@
     width: 2rem;
   }
 }
-
-
