--- a/src/Components/Projects/Projects.css
+++ b/src/Components/Projects/Projects.css
@@ -1,5 +1,5 @@
 .projects {
-    min-height: 100vh;
+    height: 100vh;
     padding-top: 4rem;
     position: relative;
 }
@@ -61,7 +61,8 @@
     border-radius: 2rem;
     overflow: hidden;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    height: 450px; 
+    height: 450px;
+    width: 700px; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -69,7 +70,7 @@
 
 .project-card img {
     width: 100%;
-    height: 250px;
+    height: 260px;
     object-fit: cover;
 }
 
@@ -77,6 +78,7 @@
     padding: 1rem 1rem 3rem;
     margin: 0;
     color: whitesmoke; 
+    text-decoration: none;
 }
 
 .project-card p {
@@ -135,11 +137,19 @@
 }
 
 @media (max-width: 480px) {
+    #projects {
+        height: fit-content;
+        margin: 3rem 0 5rem 0;
+    }
+    .projects-header {
+        height: 40px;
+    }
     .projects-header h1 {
-        font-size: 1.5rem;
+        font-size: 2rem;
     }
     .project-card {
-        height: 300px;
+        height: 320px;
+        width: 250px;
     }
     .project-card img {
         height: 100px;
