--- a/src/Components/Intro/Intro.css
+++ b/src/Components/Intro/Intro.css
@@ -15,13 +15,17 @@
 }
 
 .i-right {
-  flex: 0;
+  width: 50%;
   position: relative;
   margin-top: 0.625rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .i-left {
   margin-top: 9.375rem;
+  width: 50%;
   display: flex;
   flex-direction: column;
   gap: 0.3125rem;
@@ -77,45 +81,43 @@
 }
 
 .y-bg {
-  width: 31.25rem;
+  width: 60%;
   position: absolute;
-  top: 9.375rem;
+  bottom: 25%;
   left: 0;
 }
 
 .b-bg {
-  width: 31.25rem;
-  position: relative;
-  top: -16.875rem;
-  left: -6.25rem;
+  width: 80%;
+  position: absolute;
+  bottom: 25%;
+  left: 3rem;
   z-index: -10;
 }
 
 .boy {
-  position: relative;
-  top: 0.125rem;
+  position: absolute;
+  top: 0;
   left: 9.375rem;
-  z-index: 1;
+  z-index: 2;
   scale: 1.1;
 }
 
 .g-emoji {
   position: absolute;
-  top: -1.25rem;
-  left: -18.75rem;
+  top: 0rem;
+  left: -40rem;
   z-index: 1;
-  scale: 0.7;
+  scale: 0.6;
+  animation: right 0.5s 1 forwards;
 }
 
 .img-cont {
   position: absolute;
-  width: 12.5rem;
-  height: 3.75rem;
+  width: 10rem;
+  height: 3rem;
   padding: 1.25rem 2.5rem;
   background-color: rgb(255, 255, 255);
-  top: 28.75rem;
-  left: 2.0625rem;
-  z-index: 1;
   border-radius: 1.875rem;
   display: flex;
   justify-content: center;
@@ -125,18 +127,25 @@
 }
 
 .img-cont img {
-  width: 3.75rem;
+  width: 3rem;
 }
 
 .i-right > :nth-child(6) {
-  top: 4.375rem;
-  left: 40.625rem;
+  top: 2rem;
+  right: 2rem;
+  z-index: 1;
+}
+
+.i-right > :nth-child(4) {
+  bottom: 22%;
+  left: 1rem;
+  z-index: 2;
 }
 
 .blur1 {
   position: absolute;
   top: 0;
-  left: 37.5rem;
+  right: 0;
   z-index: -1;
   width: 25rem;
   height: 25rem;
@@ -147,8 +156,8 @@
 
 .blur2 {
   position: absolute;
-  top: 25rem;
-  left: -3.125rem;
+  bottom: 0;
+  left: 0;
   z-index: -1;
   width: 25rem;
   height: 25rem;
@@ -160,6 +169,15 @@
 @keyframes left {
   0% {
     transform: translateX(12.5rem);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes right {
+  0% {
+    transform: translateX(-15rem);
   }
   100% {
     transform: translateX(0);
@@ -184,49 +202,57 @@
 }
 
 @media (max-width: 480px) {
-  .i-left {
-    margin-top: 3rem;
+  .intro {
+    flex-direction: column-reverse;
+    height: fit-content;
   }
-  .i-left > :nth-child(1),
-  .i-left > :nth-child(2) {
-    font-size: 1.5rem;
+  .i-right {
+    height: 55vh;
+    width: 100%;
   }
-  .i-left > :nth-child(3) {
-    font-size: 1rem;
-    margin-top: 0.25rem;
-    margin-bottom: 1rem;
-  }
-  .button {
-    width: 5rem;
-    height: 1.5rem;
-    font-size: 0.8rem;
-  }
-  .icons {
-    margin: 3rem 1.5rem 1.5rem 0.5rem;
-    gap: 2rem;
-  }
-  .icons img {
-    height: 1.5rem;
-  }
-  .y-bg,
-  .b-bg {
+  .blur1,
+  .blur2 {
     width: 15rem;
+    height: 15rem;
   }
   .boy {
-    left: 3rem;
+    width: 60%;
+    left: 25%;
+    bottom: 0;
+  }
+  .img-cont p {
+    font-size: 12px;
+  }
+  .i-right > :nth-child(6) {
+    top: 2rem;
+    left: 60%;
   }
   .g-emoji {
-    left: -10rem;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    scale: 0.4;
   }
-  .img-cont {
-    width: 6rem;
-    height: 2rem;
-    padding: 0.5rem 1rem;
-    top: 16rem;
-    left: 0.75rem;
-    gap: 0.5rem;
+  .i-left {
+    width: 100%;
   }
-  .img-cont img {
-    width: 2rem;
+  .i-left {
+    margin-top: 0;
+    text-align: center;
+  }
+  .icons {
+    margin-top: 3rem;
+    margin-bottom: 2rem;
+  }
+  .i {
+    height: 1.4rem;
+    margin: 0;
+  }
+  .i-left > :nth-child(1) {
+    font-size: 2.5rem;
+  }
+
+  .i-left > :nth-child(2) {
+    font-size: 2.5rem;
   }
 }
