Refactored Footer section

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -80,8 +80,11 @@
     .f-icons {
         gap: 0.5rem;
     }
+    .fi {
+        height: 2rem;
+    }
     .f-content {
-        gap: 0rem;
+        gap: .5rem;
     }
 }
 
